welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
override def run() {
  
  for(i<-0 to getMondeLargeur()-1)
  {
    for(j<- 0 to i)
    {
      setPos(j,Math.abs(j-i))
      ecritMessage(i*(i+1)/2+j)
    }
  }
  
  for(i<-1 to getMondeLargeur()-1)
  {
    for(j<- 0 to 6-i)
    {
      setPos(6-j,6-Math.abs(-j+i)))
      ecritMessage(27+i*(i+1)/2+j)
    }
  }
  
  
  
}